<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Home -->
    <string name="home_title">Home Sample</string>
    <string name="show_all_apps">All</string>

    <!-- Home Menus -->
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <!-- Wallpaper -->
    <string name="wallpaper_instructions">Tap picture to set portrait wallpaper</string>

    <string name="app_name">Launcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="launch_app">LaunchApp</string>
    <string name="update_app">update</string>
    <string name="favorite_app">favorite</string>
    <string name="remove_app">uninstall</string>
    <string name="app_store">AppStore</string>
    <string name="check_your_network">Please check your network connection！</string>
    <string name="start_clear">Start scanning</string>
    <string name="in_clear">cleaning</string>
    <string name="clean_up_the_garbage">Clearing up the rubbish</string>
    <string name="unit">MB</string>
    <string name="eliminate_num">Number of processes:</string>
    <string name="start_eliminate_process">start clean</string>
    <string name="timing_clear">Regularly cleaned</string>
    <string name="stop_timing_clear">Stop Regularly cleaned</string>

    <string name="indicator_item_service_text">service</string>
    <string name="indicator_item_setting_text">setting</string>
    <string name="indicator_item_app_text">app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="setting_1">网络设置</string>
    <string name="setting_2">蓝牙外设</string>
    <string name="setting_3">投影设置</string>
    <string name="setting_4">文件管理</string>
    <string name="setting_5">系统更新</string>
    <string name="setting_6">关于本机</string>

</resources>

